--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="manifest" href="manifest.webmanifest" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#444444" />
   </head>
   <body>
     <app-root></app-root>
