feat(dialog): implement dialog component with open and close functionality
feat(header): create header component with user authentication and navigation

feat(main): develop main component to manage weekly time tracking and absence

feat(login): add login component for Google, Microsoft, and Apple authentication

feat(settings-dialog): implement settings dialog for user preferences

feat(pipes): add time pipe for formatting hours and minutes

style(header): add styles for header layout and responsiveness

style(main): enhance main layout styles for better user experience

style(login): style login buttons and layout

style(settings-dialog): add styles for settings dialog layout

--- a/src/main/main.html
+++ b/src/main/main.html
@@ -1,4 +1,4 @@
-<app-header [days]="days()" (weekYear)="weekYearChange($event)" />
+<wt-header [days]="days()" (weekYear)="weekYearChange($event)" />
 <main>
   @for (day of days(); track $index; let dayIndex = $index) {
     <section>
@@ -113,12 +113,12 @@
               />
             </svg>
           </button>
-          <app-dialog #confirmRemoveDialog>
+          <wt-dialog #confirmRemoveDialog>
             <h3>Confirmation</h3>
             <p>Êtes-vous sûr de vouloir supprimer cette période ?</p>
             <button (click)="confirmRemoveDialog.close()">Annuler</button>
             <button (click)="remove(dayIndex, periodIndex)">Supprimer</button>
-          </app-dialog>
+          </wt-dialog>
         }
         <hr />
         @if (day.absence === "day") {
