--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <meta name="theme-color" content="#444444" />
   </head>
   <body>
-    <app-root></app-root>
+    <wt-root></wt-root>
     <noscript
       >Please enable JavaScript to continue using this application.</noscript
     >
