--- a/src/main/main.html
+++ b/src/main/main.html
@@ -1,142 +1,143 @@
 <wt-header [days]="days()" (weekYear)="weekYearChange($event)" />
 <main>
   @for (day of days(); track $index; let dayIndex = $index) {
-    <section>
-      <h2>
-        {{ day.date | date: "EEE dd/MM" }}
-        <ngxo-tooltip [interestId]="'absence' + dayIndex"
-          >Ajouter une absence</ngxo-tooltip
+  <section>
+    <h2>
+      {{ day.date | date: "EEE dd/MM" }}
+      <ngxo-tooltip [interestId]="'absence' + dayIndex"
+        >Ajouter une absence</ngxo-tooltip
+      >
+      <button
+        type="button"
+        [attr.interesttarget]="'absence' + dayIndex"
+        [attr.popovertarget]="'absence-popover' + dayIndex"
+        class="btn-absence"
+        [class.active]="day.absence"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          viewBox="0 0 16 16"
         >
-        <button
-          type="button"
-          [attr.interesttarget]="'absence' + dayIndex"
-          [attr.popovertarget]="'absence-popover' + dayIndex"
-          class="btn-absence"
-          [class.active]="day.absence"
-        >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6.146 7.146a.5.5 0 0 1 .708 0L8 8.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 9l1.147 1.146a.5.5 0 0 1-.708.708L8 9.707l-1.146 1.147a.5.5 0 0 1-.708-.708L7.293 9 6.146 7.854a.5.5 0 0 1 0-.708"
-            />
-            <path
-              d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"
-            />
-          </svg>
-        </button>
-        <div
-          [attr.id]="'absence-popover' + dayIndex"
-          class="absence-popover popover"
-          popover
-          [style.positionAnchor]="'--absence' + dayIndex"
-        >
-          <div>
-            <button
-              (click)="markAbsence(dayIndex, undefined)"
-              [class.active]="!day.absence"
-            >
-              Présent
-            </button>
-            <button
-              (click)="markAbsence(dayIndex, 'day')"
-              [class.active]="day.absence === 'day'"
-            >
-              Absent la journée
-            </button>
-            <button
-              (click)="markAbsence(dayIndex, 'morning')"
-              [class.active]="day.absence === 'morning'"
-            >
-              Absent le matin
-            </button>
-            <button
-              (click)="markAbsence(dayIndex, 'afternoon')"
-              [class.active]="day.absence === 'afternoon'"
-            >
-              Absent l'après-midi
-            </button>
-          </div>
-        </div>
-      </h2>
-      <h3>{{ totalByDay()[dayIndex] | time }}</h3>
-
-      <div>
-        @for (period of day.periods; track $index; let periodIndex = $index) {
-          @if ($index > 0) {
-            <hr />
-          }
-          <div>
-            <label for="{{ dayIndex }}-{{ periodIndex }}-in">Entrée</label>
-            <input
-              id="{{ dayIndex }}-{{ periodIndex }}-in"
-              type="time"
-              [(ngModel)]="period.in"
-              (ngModelChange)="update(dayIndex, periodIndex, 'in', $event)"
-              min="{{ settings().minTime }}"
-            />
-          </div>
-          <div>
-            <label for="{{ dayIndex }}-{{ periodIndex }}-out">Sortie</label>
-            <input
-              id="{{ dayIndex }}-{{ periodIndex }}-out"
-              type="time"
-              [(ngModel)]="period.out"
-              (ngModelChange)="update(dayIndex, periodIndex, 'out', $event)"
-              max="{{ settings().maxTime }}"
-            />
-          </div>
-          <ngxo-tooltip [interestId]="'remove' + dayIndex + '-' + periodIndex"
-            >Supprimer la période</ngxo-tooltip
-          >
+          <path
+            d="M6.146 7.146a.5.5 0 0 1 .708 0L8 8.293l1.146-1.147a.5.5 0 1 1 .708.708L8.707 9l1.147 1.146a.5.5 0 0 1-.708.708L8 9.707l-1.146 1.147a.5.5 0 0 1-.708-.708L7.293 9 6.146 7.854a.5.5 0 0 1 0-.708"
+          />
+          <path
+            d="M3.5 0a.5.5 0 0 1 .5.5V1h8V.5a.5.5 0 0 1 1 0V1h1a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V3a2 2 0 0 1 2-2h1V.5a.5.5 0 0 1 .5-.5M1 4v10a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4z"
+          />
+        </svg>
+      </button>
+      <div
+        [attr.id]="'absence-popover' + dayIndex"
+        class="absence-popover popover"
+        popover
+        [style.positionAnchor]="'--absence' + dayIndex"
+      >
+        <div>
           <button
-            (click)="remove(dayIndex, periodIndex, confirmRemoveDialog)"
-            class="btn-danger"
-            [attr.interesttarget]="'remove' + dayIndex + '-' + periodIndex"
+            (click)="markAbsence(dayIndex, undefined)"
+            [class.active]="!day.absence"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              width="16"
-              height="16"
-              fill="currentColor"
-              viewBox="0 0 16 16"
-            >
-              <path
-                d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
-              />
-              <path
-                d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
-              />
-            </svg>
+            Présent
           </button>
-          <wt-dialog #confirmRemoveDialog>
-            <h3>Confirmation</h3>
-            <p>Êtes-vous sûr de vouloir supprimer cette période ?</p>
-            <button (click)="confirmRemoveDialog.close()">Annuler</button>
-            <button (click)="remove(dayIndex, periodIndex)">Supprimer</button>
-          </wt-dialog>
-        }
-        <hr />
-        @if (day.absence === "day") {
-          Absent la journée
-        } @else if (day.absence === "morning") {
-          Absent le matin
-          <hr />
-        } @else if (day.absence === "afternoon") {
-          Absent l'après-midi
-          <hr />
-        }
-
-        @if (day.absence !== "day") {
-          <button (click)="add(dayIndex)" class="btn-success">
-            Ajouter une période
+          <button
+            (click)="markAbsence(dayIndex, 'day')"
+            [class.active]="day.absence === 'day'"
+          >
+            Absent la journée
           </button>
-        }
+          <button
+            (click)="markAbsence(dayIndex, 'morning')"
+            [class.active]="day.absence === 'morning'"
+          >
+            Absent le matin
+          </button>
+          <button
+            (click)="markAbsence(dayIndex, 'afternoon')"
+            [class.active]="day.absence === 'afternoon'"
+          >
+            Absent l'après-midi
+          </button>
+        </div>
       </div>
-    </section>
+    </h2>
+    <h3>{{ totalByDay()[dayIndex] | time }}</h3>
+
+    <div>
+      @for (period of day.periods; track $index; let periodIndex = $index) { @if
+      ($index > 0) {
+      <hr />
+      }
+      <div>
+        <label for="{{ dayIndex }}-{{ periodIndex }}-in">Entrée</label>
+        <input
+          id="{{ dayIndex }}-{{ periodIndex }}-in"
+          type="time"
+          [(ngModel)]="period.in"
+          (ngModelChange)="update(dayIndex, periodIndex, 'in', $event)"
+          min="{{ settings().minTime }}"
+        />
+      </div>
+      <div>
+        <label for="{{ dayIndex }}-{{ periodIndex }}-out">Sortie</label>
+        <input
+          id="{{ dayIndex }}-{{ periodIndex }}-out"
+          type="time"
+          [(ngModel)]="period.out"
+          (ngModelChange)="update(dayIndex, periodIndex, 'out', $event)"
+          max="{{ settings().maxTime }}"
+        />
+      </div>
+      <ngxo-tooltip [interestId]="'remove' + dayIndex + '-' + periodIndex"
+        >Supprimer la période</ngxo-tooltip
+      >
+      <button
+        (click)="remove(dayIndex, periodIndex, confirmRemoveDialog)"
+        class="btn-danger"
+        [attr.interesttarget]="'remove' + dayIndex + '-' + periodIndex"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="16"
+          height="16"
+          fill="currentColor"
+          viewBox="0 0 16 16"
+        >
+          <path
+            d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+          />
+          <path
+            d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+          />
+        </svg>
+      </button>
+      <wt-dialog #confirmRemoveDialog>
+        <h3>Confirmation</h3>
+        <p>Êtes-vous sûr de vouloir supprimer cette période ?</p>
+        <button (click)="confirmRemoveDialog.close()">Annuler</button>
+        <button (click)="remove(dayIndex, periodIndex)">Supprimer</button>
+      </wt-dialog>
+      }
+      <hr />
+      @if (day.absence === "day") { Absent la journée } @else if (day.absence
+      === "morning") { Absent le matin
+      <hr />
+      } @else if (day.absence === "afternoon") { Absent l'après-midi
+      <hr />
+      } @if (day.absence !== "day") {
+      <button (click)="add(dayIndex)" class="btn-success">
+        Ajouter une période
+      </button>
+      }
+    </div>
+  </section>
   }
 </main>
+
+@if(offline()) {
+<div class="offline-banner">
+  <p>Vous êtes hors ligne.</p>
+</div>
+}
